# PolymarketBotv3

./: .env.example  .gitignore  PROJECT_SCOPE.md  README.md  conftest.py  pyproject.toml
config/: settings.yaml
src/: config_loader.py  logger.py  run.py
src/data/: fetcher.py  storage.py
src/enrichment/: models.py  session_enricher.py
src/polymarket/: http_client.py  markets.py  models.py  prices.py
tests/: test_binance_spot.py  test_config_loader.py  test_enrichment_models.py  test_external_models.py  test_fetcher.py  test_http_client.py  test_logger.py  test_markets.py  test_models.py  test_prices.py  test_reference_price.py  test_run.py  test_session_enricher.py  test_storage.py
